# homework-50

./: .gitignore  README.md  pyproject.toml
homework_50/: example.py
tests/: test_homework_50.py
