[tool.poetry]
name = "homework-50"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <teacher.ilya.255@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
example = 'homework_50.example:main'
